@@ -28,6 +28,7 @@ ENHANCEMENTS FROM 1.1
 - Better error reporting in FileHelper when destination directories (moveRec) or files (copyRec) could not be created
 - Added functions to FileResourceManager for copying and moving resources.
 - Added possibility to append to (instead of overwriting) an existing resource with writeResource in FileResourceManager.
+- Added LoggerFacade implementation for Jakarta Commons Logging
 
 BUGFIXES FROM 1.1
 -----------------
